// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages/users/_id/ltcsSubsidies/_subsidyId/index.vue FAB (speed dial) should be rendered when session auth is system admin 1`] = `
<z-fab-speed-dial-stub
  data-fab=""
  icon="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
>
  <z-fab-speed-dial-button-stub
    color="secondary"
    icon="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
    nuxt=""
    to="/users/1/ltcs-subsidies/10/edit"
  >
      公費情報を編集
  </z-fab-speed-dial-button-stub>
  <z-fab-speed-dial-button-stub
    color="secondary"
    icon="M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19M8,9H16V19H8V9M15.5,4L14.5,3H9.5L8.5,4H5V6H19V4H15.5Z"
  >
      公費情報を削除
  </z-fab-speed-dial-button-stub>
</z-fab-speed-dial-stub>
`;

exports[`pages/users/_id/ltcsSubsidies/_subsidyId/index.vue FAB (speed dial) should be rendered when the staff has permissions: [ 'user-ltcs-subsidies/delete' ] 1`] = `
<z-fab-speed-dial-stub
  data-fab=""
  icon="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
>
  <!---->
  <z-fab-speed-dial-button-stub
    color="secondary"
    icon="M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19M8,9H16V19H8V9M15.5,4L14.5,3H9.5L8.5,4H5V6H19V4H15.5Z"
  >
      公費情報を削除
  </z-fab-speed-dial-button-stub>
</z-fab-speed-dial-stub>
`;

exports[`pages/users/_id/ltcsSubsidies/_subsidyId/index.vue FAB (speed dial) should be rendered when the staff has permissions: [ 'user-ltcs-subsidies/update' ] 1`] = `
<z-fab-speed-dial-stub
  data-fab=""
  icon="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
>
  <z-fab-speed-dial-button-stub
    color="secondary"
    icon="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
    nuxt=""
    to="/users/1/ltcs-subsidies/10/edit"
  >
      公費情報を編集
  </z-fab-speed-dial-button-stub>
  <!---->
</z-fab-speed-dial-stub>
`;

exports[`pages/users/_id/ltcsSubsidies/_subsidyId/index.vue FAB (speed dial) should be rendered when the staff has permissions: [ 'user-ltcs-subsidies/update', 'user-ltcs-subsidies/delete' ] 1`] = `
<z-fab-speed-dial-stub
  data-fab=""
  icon="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
>
  <z-fab-speed-dial-button-stub
    color="secondary"
    icon="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
    nuxt=""
    to="/users/1/ltcs-subsidies/10/edit"
  >
      公費情報を編集
  </z-fab-speed-dial-button-stub>
  <z-fab-speed-dial-button-stub
    color="secondary"
    icon="M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19M8,9H16V19H8V9M15.5,4L14.5,3H9.5L8.5,4H5V6H19V4H15.5Z"
  >
      公費情報を削除
  </z-fab-speed-dial-button-stub>
</z-fab-speed-dial-stub>
`;

exports[`pages/users/_id/ltcsSubsidies/_subsidyId/index.vue should be rendered correctly 1`] = `
<div
  breadcrumbs="[object Object],[object Object],[object Object]"
  class="z-page-stub"
  compact="compact"
>
  <div
    class="z-page-stub-slot-tabs"
  />
  <div
    class="z-page-stub-slot-title"
  />
  <z-user-summary-stub
    user="[object Object]"
  />
  <div
    class="z-data-card-stub"
    title="公費情報"
  >
    <div
      class="z-data-card-stub-slot-actions"
    />
    <z-data-card-item-stub
      icon="M19,19H5V8H19M16,1V3H8V1H6V3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3H18V1M17,12H12V17H17V12Z"
      label="適用期間"
      value="10"
    >
      <time
        datetime="1983-05-01"
      >
        昭和58年5月1日
      </time>
      <span>
        〜
      </span>
      <time
        datetime="2020-07-21"
      >
        令和2年7月21日
      </time>
    </z-data-card-item-stub>
    <z-data-card-item-stub
      icon="M20,10H4V4H20M20,15H4V13H20M20,2H4C2.89,2 2,2.89 2,4V15C2,16.11 2.89,17 4,17H8V22L12,20L16,22V17H20C21.11,17 22,16.11 22,15V4C22,2.89 21.11,2 20,2Z"
      label="公費制度（法別番号）"
      value="【58】特別対策（全額免除）"
    />
    <z-data-card-item-stub
      icon="M15,23H13V21H15V23M19,21H17V23H19V21M15,17H13V19H15V17M7,21H5V23H7V21M7,17H5V19H7V17M19,17H17V19H19V17M15,13H13V15H15V13M19,13H17V15H19V13M21,9A2,2 0 0,1 23,11V23H21V11H11V23H9V15H3V23H1V15A2,2 0 0,1 3,13H9V11A2,2 0 0,1 11,9V7A2,2 0 0,1 13,5H15V1H17V5H19A2,2 0 0,1 21,7V9M19,9V7H13V9H19Z"
      label="負担者番号"
      value="17103917"
    />
    <z-data-card-item-stub
      icon="M2,6H4V18H2V6M5,6H6V18H5V6M7,6H10V18H7V6M11,6H12V18H11V6M14,6H16V18H14V6M17,6H20V18H17V6M21,6H22V18H21V6Z"
      label="受給者番号"
      value="1461169"
    />
    <z-data-card-item-stub
      icon="M11,2V22C5.9,21.5 2,17.2 2,12C2,6.8 5.9,2.5 11,2M13,2V11H22C21.5,6.2 17.8,2.5 13,2M13,13V22C17.7,21.5 21.5,17.8 22,13H13Z"
      label="給付率"
      value="8%"
    />
    <z-data-card-item-stub
      icon="M13.92 11H18V13H13V15H18V17H13V21H11V17H6V15H11V13H6V11H10.08L5 3H7.37L12 10.29L16.63 3H19L13.92 11Z"
      label="本人負担額"
      value="1857円"
    />
    <div
      class="z-data-card-stub-slot-header"
    />
  </div>
  <z-system-meta-card-stub
    createdat="1993-07-14T03:55:13+0900"
    id="10"
    updatedat="1979-11-21T17:33:00+0900"
  />
  <z-fab-speed-dial-stub
    data-fab=""
    icon="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
  >
    <z-fab-speed-dial-button-stub
      color="secondary"
      icon="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
      nuxt=""
      to="/users/1/ltcs-subsidies/10/edit"
    >
      公費情報を編集
    </z-fab-speed-dial-button-stub>
    <z-fab-speed-dial-button-stub
      color="secondary"
      icon="M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19M8,9H16V19H8V9M15.5,4L14.5,3H9.5L8.5,4H5V6H19V4H15.5Z"
    >
      公費情報を削除
    </z-fab-speed-dial-button-stub>
  </z-fab-speed-dial-stub>
</div>
`;
